# GameOfLife

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  main.cpp
includes/: Game.hpp  SDL_ext.hpp  cleanup.hpp  services.hpp
src/: Game.cpp  SDL_ext.cpp  services.cpp
